--- a/src/components/navigation2/index.scss
+++ b/src/components/navigation2/index.scss
@@ -5,6 +5,7 @@
   height: 70px;
   display: flex;
   justify-content: flex-start; // Đưa nội dung về sát lề trái
+  margin-top: 125px;
 
   .breadcrumbBar {
     padding-left: 20px; // Khoảng cách 20px từ lề trái
