--- a/src/card/index.scss
+++ b/src/card/index.scss
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
     width:calc(100% /4);
+    height: fit-content;
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 0 17px 6px rgba(0,0,0,0.1);
@@ -134,4 +135,11 @@
 
 .fish-card__fly {
     animation: flyToCart 0.5s ease-in-out forwards;
+}
+
+.button.disabled {
+  cursor: not-allowed;
+  &:hover {
+    opacity: 0.7;
+  }
 }
