--- a/src/components/consignmentHistory/index.scss
+++ b/src/components/consignmentHistory/index.scss
@@ -1,6 +1,6 @@
 /* Overall page styling */
 .consignment-history-page {
-    padding-top: 130px;
+    padding-top: 50px;
   
     .consignment-history-container {
       padding: 100px;
@@ -105,6 +105,7 @@
   }
   .ant-modal .ant-btn{
     background-color: black;
+    color: #fff;
   }
   .extend-button{
     background-color: black;
