--- a/src/components/orderHistory/index.scss
+++ b/src/components/orderHistory/index.scss
@@ -49,6 +49,7 @@
     padding: 8px 16px;
     font-weight: bold;
     transition: background-color 0.3s ease;
+    margin-right: 8px;
 
     &:hover {
       background-color: #333;
@@ -155,3 +156,4 @@
     padding: 0;
   }
 }
+
