--- a/src/page/ProductDetails/index.scss
+++ b/src/page/ProductDetails/index.scss
@@ -25,7 +25,6 @@ body {
   align-items: center;
   color: #333;
   margin: auto;
-  margin-top: 130px;
 }
 
 /* Header */
@@ -220,5 +219,24 @@ body {
   }
 }
 
-/* Fish List Section */
+.certificate-modal {
+  width: 80%;
+  .certificate-content {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    
+    .certificate-image {
+      width: 100%;
+      height: auto;
+      object-fit: contain;
+    }
+  }
+}
 
+:where(.css-dev-only-do-not-override-qnu6hi).ant-modal .ant-modal-close-x {
+  margin-bottom: 35px;
+  margin-left: 25px;;
+  color: black;
+}
+  
