--- a/src/page/feedbacks/index.scss
+++ b/src/page/feedbacks/index.scss
@@ -1,13 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
 .feedback-page {
+    margin-top: 45px;
     font-family: 'Poppins', sans-serif;
-    height: 100vh;
+    min-height: 100vh;
     color: #333;
     
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    padding: 100px 0;
 }
 
 .feedback-container {
@@ -18,8 +21,9 @@
     border-radius: 20px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     text-align: center;
-    margin-top: 20%;
-    margin-bottom: 10%; 
+    margin-top: 0;
+    margin-bottom: 0;
+    position: relative;
 
     .feedback-header {
         font-size: 2rem;
@@ -115,7 +119,9 @@
     }
 }
 .Background{
-    position: absolute;
+    position: fixed;
+    top: 0;
+    left: 0;
     z-index: -1;
     width: 100%;
     height: 100%;
